--- a/app/src/main/res/xml/carousel_scene.xml
+++ b/app/src/main/res/xml/carousel_scene.xml
@@ -11,7 +11,6 @@
 		app:duration="500"
 		>
 
-
 		<OnSwipe app:dragDirection="dragLeft"
 			app:touchAnchorId="@id/v1"
 			/>
@@ -30,14 +29,52 @@
 
 	</Transition>
 
-	<Transition android:id="@+id/thirdToLast"
+	<!-- backwards compatibility between secondPos and thirdPos -->
+	<Transition android:id="@+id/thirdToSecond"
 		app:constraintSetStart="@id/thirdPos"
-		app:constraintSetEnd="@id/lastPos"
+		app:constraintSetEnd="@id/secondPos"
+		app:duration="500"
+		>
+
+		<OnSwipe app:dragDirection="dragRight"
+			app:touchAnchorId="@id/v3"
+			/>
+
+	</Transition>
+
+	<Transition android:id="@+id/thirdToFourth"
+		app:constraintSetStart="@id/thirdPos"
+		app:constraintSetEnd="@id/fourthPos"
 		app:duration="500"
 		>
 
 		<OnSwipe app:dragDirection="dragLeft"
 			app:touchAnchorId="@id/v3"
+			/>
+
+	</Transition>
+
+	<!-- backwards compatibility between thirdPos and fourthPos -->
+	<Transition android:id="@+id/fourthToThird"
+		app:constraintSetStart="@id/fourthPos"
+		app:constraintSetEnd="@id/thirdPos"
+		app:duration="500"
+		>
+
+		<OnSwipe app:dragDirection="dragRight"
+			app:touchAnchorId="@id/v4"
+			/>
+
+	</Transition>
+
+	<Transition android:id="@+id/fourthToLast"
+		app:constraintSetStart="@id/fourthPos"
+		app:constraintSetEnd="@id/lastPos"
+		app:duration="500"
+		>
+
+		<OnSwipe app:dragDirection="dragLeft"
+			app:touchAnchorId="@id/v4"
 			/>
 
 	</Transition>
@@ -80,12 +117,14 @@
 
 	<!-- first on the left second in center and third right -->
 	<ConstraintSet android:id="@+id/secondPos">
+
 		<Constraint android:id="@+id/v1"
 			android:layout_width="250dp"
 			android:layout_height="250dp"
 			android:layout_marginTop="24dp"
 
 			android:rotation="50"
+
 			android:scaleX="0.7"
 			android:scaleY="0.7"
 
@@ -131,6 +170,24 @@
 			/>
 
 		<Constraint android:id="@+id/v4"
+			android:layout_width="250dp"
+			android:layout_height="250dp"
+			android:layout_marginTop="24dp"
+
+			android:scaleX="0.7"
+			android:scaleY="0.7"
+
+			app:layout_constraintCircle="@id/v2"
+			app:layout_constraintCircleRadius="500dp"
+			app:layout_constraintCircleAngle="120"
+
+			app:layout_constraintTop_toBottomOf="@id/tvPizzaChip"
+			app:layout_constraintEnd_toEndOf="parent"
+			app:layout_constraintStart_toStartOf="parent"
+
+			/>
+
+		<Constraint android:id="@+id/v5"
 			android:layout_width="250dp"
 			android:layout_height="250dp"
 			android:layout_marginTop="24dp"
@@ -158,7 +215,6 @@
 			android:layout_height="250dp"
 			android:layout_marginTop="24dp"
 
-
 			android:scaleX="0.7"
 			android:scaleY="0.7"
 
@@ -220,10 +276,24 @@
 			app:layout_constraintStart_toStartOf="parent"
 			/>
 
+		<Constraint android:id="@+id/v5"
+			android:layout_width="250dp"
+			android:layout_height="250dp"
+			android:layout_marginTop="24dp"
+
+			app:layout_constraintCircle="@id/v3"
+			app:layout_constraintCircleRadius="500dp"
+			app:layout_constraintCircleAngle="120"
+
+			app:layout_constraintTop_toBottomOf="@id/tvPizzaChip"
+			app:layout_constraintEnd_toEndOf="parent"
+			app:layout_constraintStart_toStartOf="parent"
+			/>
+
 	</ConstraintSet>
 
-	<!-- third and 4th visible -->
-	<ConstraintSet android:id="@+id/lastPos">
+	<!-- third on right 4th in center 5th on left -->
+	<ConstraintSet android:id="@+id/fourthPos">
 
 		<Constraint android:id="@+id/v1"
 			android:layout_width="250dp"
@@ -280,6 +350,112 @@
 			/>
 
 		<Constraint android:id="@+id/v4"
+			android:layout_width="250dp"
+			android:layout_height="250dp"
+			android:layout_marginTop="24dp"
+
+			app:layout_constraintTop_toBottomOf="@id/tvPizzaChip"
+			app:layout_constraintEnd_toEndOf="parent"
+			app:layout_constraintStart_toStartOf="parent"
+			/>
+
+		<Constraint android:id="@+id/v5"
+			android:layout_width="250dp"
+			android:layout_height="250dp"
+			android:layout_marginTop="24dp"
+
+			android:rotation="50"
+
+			android:scaleX="0.7"
+			android:scaleY="0.7"
+
+			app:layout_constraintCircle="@id/v4"
+			app:layout_constraintCircleRadius="300dp"
+			app:layout_constraintCircleAngle="120"
+
+			app:layout_constraintTop_toBottomOf="@id/tvPizzaChip"
+			app:layout_constraintEnd_toEndOf="parent"
+			app:layout_constraintStart_toStartOf="parent"
+			/>
+
+
+	</ConstraintSet>
+
+	<!-- 4th and 5th visible -->
+	<ConstraintSet android:id="@+id/lastPos">
+
+		<Constraint android:id="@+id/v1"
+			android:layout_width="250dp"
+			android:layout_height="250dp"
+			android:layout_marginTop="24dp"
+
+			android:scaleX="0.7"
+			android:scaleY="0.7"
+
+			app:layout_constraintCircle="@id/v5"
+			app:layout_constraintCircleRadius="500dp"
+			app:layout_constraintCircleAngle="240"
+
+			app:layout_constraintTop_toBottomOf="@id/tvPizzaChip"
+			app:layout_constraintEnd_toEndOf="parent"
+			app:layout_constraintStart_toStartOf="parent"
+
+			/>
+
+		<Constraint android:id="@+id/v2"
+			android:layout_width="250dp"
+			android:layout_height="250dp"
+			android:layout_marginTop="24dp"
+
+			android:scaleX="0.7"
+			android:scaleY="0.7"
+
+			app:layout_constraintCircle="@id/v5"
+			app:layout_constraintCircleRadius="500dp"
+			app:layout_constraintCircleAngle="240"
+
+			app:layout_constraintTop_toBottomOf="@id/tvPizzaChip"
+			app:layout_constraintEnd_toEndOf="parent"
+			app:layout_constraintStart_toStartOf="parent"
+			/>
+
+		<Constraint android:id="@+id/v3"
+			android:layout_width="250dp"
+			android:layout_height="250dp"
+			android:layout_marginTop="24dp"
+
+			android:scaleX="0.7"
+			android:scaleY="0.7"
+
+			app:layout_constraintCircle="@id/v5"
+			app:layout_constraintCircleRadius="500dp"
+			app:layout_constraintCircleAngle="240"
+
+			app:layout_constraintTop_toBottomOf="@id/tvPizzaChip"
+			app:layout_constraintEnd_toEndOf="parent"
+			app:layout_constraintStart_toStartOf="parent"
+			/>
+
+		<Constraint android:id="@+id/v4"
+			android:layout_width="250dp"
+			android:layout_height="250dp"
+			android:layout_marginTop="24dp"
+
+			android:rotation="50"
+
+			android:scaleX="0.7"
+			android:scaleY="0.7"
+
+			app:layout_constraintCircle="@id/v5"
+			app:layout_constraintCircleRadius="300dp"
+			app:layout_constraintCircleAngle="240"
+
+			app:layout_constraintTop_toBottomOf="@id/tvPizzaChip"
+			app:layout_constraintEnd_toEndOf="parent"
+			app:layout_constraintStart_toStartOf="parent"
+			/>
+
+		<Constraint android:id="@+id/v5"
 			android:layout_width="250dp"
 			android:layout_height="250dp"
 			android:layout_marginTop="24dp"
