added names + finding pizza in focus

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -89,7 +89,7 @@
 
 		/>
 
-	<ImageView android:id="@+id/v1"
+	<ImageView android:id="@+id/pizza1"
 		android:layout_width="250dp"
 		android:layout_height="250dp"
 		android:layout_marginTop="24dp"
@@ -103,7 +103,7 @@
 
 		/>
 
-	<ImageView android:id="@+id/v2"
+	<ImageView android:id="@+id/pizza2"
 		android:layout_width="250dp"
 		android:layout_height="250dp"
 		android:layout_marginTop="24dp"
@@ -114,7 +114,7 @@
 		android:scaleX="0.7"
 		android:scaleY="0.7"
 
-		app:layout_constraintCircle="@id/v1"
+		app:layout_constraintCircle="@id/pizza1"
 		app:layout_constraintCircleRadius="300dp"
 		app:layout_constraintCircleAngle="120"
 
@@ -124,7 +124,7 @@
 
 		/>
 
-	<ImageView android:id="@+id/v3"
+	<ImageView android:id="@+id/pizza3"
 		android:layout_width="250dp"
 		android:layout_height="250dp"
 		android:layout_marginTop="24dp"
@@ -135,7 +135,7 @@
 		android:scaleX="0.7"
 		android:scaleY="0.7"
 
-		app:layout_constraintCircle="@id/v1"
+		app:layout_constraintCircle="@id/pizza1"
 		app:layout_constraintCircleRadius="500dp"
 		app:layout_constraintCircleAngle="120"
 
@@ -145,7 +145,7 @@
 
 		/>
 
-	<ImageView android:id="@+id/v4"
+	<ImageView android:id="@+id/pizza4"
 		android:layout_width="250dp"
 		android:layout_height="250dp"
 		android:layout_marginTop="24dp"
@@ -156,7 +156,7 @@
 		android:scaleX="0.7"
 		android:scaleY="0.7"
 
-		app:layout_constraintCircle="@id/v1"
+		app:layout_constraintCircle="@id/pizza1"
 		app:layout_constraintCircleRadius="500dp"
 		app:layout_constraintCircleAngle="120"
 
@@ -166,7 +166,7 @@
 
 		/>
 
-	<ImageView android:id="@+id/v5"
+	<ImageView android:id="@+id/pizza5"
 		android:layout_width="250dp"
 		android:layout_height="250dp"
 		android:layout_marginTop="24dp"
@@ -177,7 +177,7 @@
 		android:scaleX="0.7"
 		android:scaleY="0.7"
 
-		app:layout_constraintCircle="@id/v1"
+		app:layout_constraintCircle="@id/pizza1"
 		app:layout_constraintCircleRadius="500dp"
 		app:layout_constraintCircleAngle="120"
 
@@ -188,13 +188,79 @@
 		/>
 
 	<com.google.android.material.textview.MaterialTextView
-		android:id="@+id/tvPizzaName"
+		android:id="@+id/name1"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:layout_marginTop="16dp"
 
-		android:text="Firmennaya"
+		android:text=""
 		android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
+
+		android:alpha="0"
+
+		app:layout_constraintTop_toBottomOf="@id/pizzaViewsBounds"
+		app:layout_constraintStart_toStartOf="@id/pizzaViewsBounds"
+		app:layout_constraintEnd_toEndOf="@id/pizzaViewsBounds"
+		/>
+
+	<com.google.android.material.textview.MaterialTextView
+		android:id="@+id/name2"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_marginTop="16dp"
+
+		android:text=""
+		android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
+
+		android:alpha="0"
+
+		app:layout_constraintTop_toBottomOf="@id/pizzaViewsBounds"
+		app:layout_constraintStart_toStartOf="@id/pizzaViewsBounds"
+		app:layout_constraintEnd_toEndOf="@id/pizzaViewsBounds"
+		/>
+
+	<com.google.android.material.textview.MaterialTextView
+		android:id="@+id/name3"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_marginTop="16dp"
+
+		android:text=""
+		android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
+
+		android:alpha="0"
+
+		app:layout_constraintTop_toBottomOf="@id/pizzaViewsBounds"
+		app:layout_constraintStart_toStartOf="@id/pizzaViewsBounds"
+		app:layout_constraintEnd_toEndOf="@id/pizzaViewsBounds"
+		/>
+
+	<com.google.android.material.textview.MaterialTextView
+		android:id="@+id/name4"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_marginTop="16dp"
+
+		android:text=""
+		android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
+
+		android:alpha="0"
+
+		app:layout_constraintTop_toBottomOf="@id/pizzaViewsBounds"
+		app:layout_constraintStart_toStartOf="@id/pizzaViewsBounds"
+		app:layout_constraintEnd_toEndOf="@id/pizzaViewsBounds"
+		/>
+
+	<com.google.android.material.textview.MaterialTextView
+		android:id="@+id/name5"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_marginTop="16dp"
+
+		android:text=""
+		android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
+
+		android:alpha="0"
 
 		app:layout_constraintTop_toBottomOf="@id/pizzaViewsBounds"
 		app:layout_constraintStart_toStartOf="@id/pizzaViewsBounds"
